Added rest of functionality

--- a/Libro_Swap/Libro_Swap/appsettings.json
+++ b/Libro_Swap/Libro_Swap/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Libro_Swap-E6985FB2-F6DC-4CB4-89B4-D87DB7D47DB1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,8 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "Libro_SwapDBContextConnection": "Server=.;Database=Libro_SwapDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
